samples/_failures_safe/1761405928_7f3ce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f760ed09.c: In function ‘main’:
./samples/SAFE/__tmp_f760ed09.c:147:5: error: expected expression at end of input
  147 |     size_t compressed_size =
      |     ^~~~~~
./samples/SAFE/__tmp_f760ed09.c:147:5: error: expected declaration or statement at end of input
